--- a/css/style.css
+++ b/css/style.css
@@ -1,168 +1,211 @@
+table {
+    border-collapse: collapse;
+    margin: auto;
 
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    
-    /* background-image: url("../images/TreassureIsland.png"); */
-}
-
-.sectionLayout {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    position: absolute;
+    width: 60%;
+    height: 60%;
+    table-layout: fixed;
+    border-collapse: collapse;
   }
 
- 
+  td {
+    /* width: 50px;
+    height: 50px; */
+    text-align: center;
+    vertical-align: middle;
+    font-size: 24px;
+    font-weight: bold;
+    border: 1px solid #fff;
+
+    width: calc(100% / 8);
+    height: calc(100% / 8);
+  }
+
+  th {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    border: 1px solid #fff;
+    color: #fff;
+  }
+
+  /* Set the container to fill the entire viewport */
+.container {
+    
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    background-color: rgba(0, 109, 130, 1);
+    z-index: 1;
+    position: relative;
+    width: 100%;
+    max-width: auto;
+    margin: 0 auto;
+
+    background-size: cover;
+   
+  }
   
+  /* Set the game section to take up 50% of the width */
+  .game {
+    flex: 1;
+    height: 100%;
+    /* border: 1px solid black; */
+
+    position: relative;
+    width: 100%;
+    max-width: 1000px; /* adjust as needed */
+    margin: auto;
+  }
+
+
+.gameContainer {
+    margin-left: 30%;
+    margin-top: 24%;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%; /* set to the same value as width to create a square */
+    overflow: hidden;
+    z-index: 1;
+    position: relative;
+}
+
+
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url('../images/TreassureIsland.png');
+    background-repeat: no-repeat;
+    background-size: cover; 
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+  }
+  .text-layer {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    font-weight: bold;
+    color: whitesmoke;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  }
+
+  
+  /* Set the info section to take up 50% of the width */
+  .info {
+    flex: 1;
+    height: 100%;
+    /* border: 1px solid black; */
+  }
+
+
   .hintContainer {
+    position: relative;
+    float: left;
+    flex: 1;
+    height: 100%;
+    /* margin-left: 5rem; */
     margin-top: 5rem;
+    margin-bottom: 5rem;
+    margin-left: 5rem;
     /* position: absolute; */
-    top: 3vh;
-    left: 3vw;
+    width: 70%;
     z-index: 9999;
   }
   
   .hint {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     border: 0.2rem solid darkcyan;
     padding: 1.5rem;
     border-radius: 1rem;
     box-shadow: 0 0 0.625rem #006d82ff;
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     font-family: 'Press Start 2P', cursive, "Arial", "sans-serif";
     font-size: 1.125rem;
     
-   
-
     background-color: #006d82ff;
     color: #fff;
    
     border-style: inset;
     text-shadow: 3px 3px 0 #363434;
+
+   
     
   }
   
   #foundTreasure {
+    text-align: center;
     margin-top: 1rem;
     background-color: #cca669;
+
+    align-items: center;
+    justify-content: flex-start;
+    border: 0.2rem solid darkcyan;
+   
+    border-radius: 1rem;
+    box-shadow: 0 0 0.625rem #006d82ff;
+    
+    font-family: 'Press Start 2P', cursive, "Arial", "sans-serif";
+    border-style: inset;
+    text-shadow: 3px 3px 0 #363434;
+
     color: #fff;
   }
   
   #stepsAway {
     font-weight: bold;
     margin: 0 0.3125rem;
+   
+  } 
+
+
+
+  
+  /* Set the layout for smaller screens */
+  @media screen and (max-width: 1100px) {
+    .container {
+      flex-direction: column;
+    }
+  
+    .game, .info {
+      flex: 0 0 auto;
+      height: 50%;
+    }
+  }
+
+  /* Media query for screens up to 768px wide */
+@media screen and (max-width: 768px) {
+    .container {
+      max-width: 90%;
+    }
+  
+    .game, .info {
+      max-width: 90%;
+    }
   }
   
+  /* Media query for screens up to 576px wide */
+  @media screen and (max-width: 576px) {
+    .container {
+      max-width: 100%;
+      padding: 0 10px;
+    }
   
+    .game, .info {
+      max-width: 100%;
+      padding: 0 10px;
+    }
 
+    .hintContainer, .hint {
+        width: 50%;
+    }
 
-.game_container {
-  margin-top: 3rem;
-  background-image: url("../images/TreassureIsland.png");   
-  background-repeat: no-repeat;
-  background-size: 120% 145%; 
-  background-position: center;
-  /* padding-bottom: 15rem; */
-  /* float: right; */
-  width: 90vh;
-  height: 85vh;
-  border-radius: 5%;
-  border: 5px solid darkcyan;
-  border-style: inset;
-  background-color: #006d82ff;
-}
-
-#boardContainer {
-  
-    float: right;
-    width: 70vh;
-    height: 70vh;
-     border: 3px #006d82ff darkcyan;
-     display: grid;
-     justify-content:end;
-     grid-template-rows: repeat(1, frr);
-     margin-right: 5rem;
-     box-shadow: 0 0 0.625rem #006d82ff;
-}
-
-.boardRow {
-    height: 8.75vh;
-    border: 1px solid darkcyan;
-    display: flex;
-}
-
-.boxes {
-    background-color: transparent; 
-    justify-content: center;
-    align-items: center;
-    width:8.75vh;
-    height:8.75vh;
-    border: 2px solid darkcyan;
-    border-style: inset;
-}
-
-
- .label {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width:9vh;
-        height:9vh;
-        font-weight: bold;
-        /* font-size: larger; */
-
-        font-size: 5vh;
-        font-weight: bold;
-        color: darkcyan;
-        text-shadow: 2px 2px 0 #333, 4px 4px 0 #666, 6px 6px 0 #999, 5px 5px 0 #ccc, 6px 6px 0 #eee;
-        transform-style: preserve-3d;
-        transform: perspective(800px) rotateY(0deg) rotateX(0deg) rotateZ(0deg);
-      
-        
-      }
-    
-      
-
-      .row-labels {
-        display: flex;
-        flex-wrap: wrap;
-        outline: 0px;
-        float: right;
-        color:blanchedalmond  ;
-        /* background-color: white; */
-        margin-right: 6rem;
-
-      
-		
-        
-      }
-
-      .col-labels {
-        float: right;   
-        flex-wrap: wrap;
-        /* background-color: white; */
-        display: flex;
-        outline: 0px;
-        flex-direction: column;
-        justify-content: space-between;
-        position: relative;
-        color:blanchedalmond;
-        /* margin-right: 1rem; */
-       
-      }
-
-   /* #foundTreasure {
-    justify-content: center;
-    text-align: center;
-    background-color: rgb(7, 191, 47);
-    color: #fff;
-    border-radius: 30px;
-    border: 2px solid green;
-    border-style: inset;
-   
-   } */
-
-   
+  }
