--- a/game_style.css
+++ b/game_style.css
@@ -78,7 +78,7 @@ table {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url('../images/TreassureIsland.png');
+    background-image: url('../TreassureIsland.png');
     background-repeat: no-repeat;
     background-size: cover; 
     width: 100%;
