--- a/game_style.css
+++ b/game_style.css
@@ -39,14 +39,14 @@ table {
     flex-direction: row;
     height: 100%;
     background-color: rgba(0, 109, 130, 1);
-    z-index: 1;
+   
     position: relative;
     width: 100%;
     max-width: auto;
     margin: 0 auto;
 
     background-size: cover;
-   
+    z-index: 1;
   }
   
   /* Set the game section to take up 50% of the width */
@@ -69,8 +69,9 @@ table {
     width: 100%;
     padding-bottom: 100%; /* set to the same value as width to create a square */
     overflow: hidden;
-    z-index: 1;
+   
     position: relative;
+     z-index: 1;
 }
 
 
@@ -78,7 +79,7 @@ table {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url('../TreassureIsland.png');
+    background-image: url('./TreassureIsland.png');
     background-repeat: no-repeat;
     background-size: cover; 
     width: 100%;
