--- a/game_style.css
+++ b/game_style.css
@@ -174,6 +174,8 @@ table {
   @media screen and (max-width: 1100px) {
     .container {
       flex-direction: column;
+      width: 170%;
+      height: 150%;
     }
   
     .game, .info {
